--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,25 +18,25 @@ jobs:
     
     - uses: actions/checkout@v4
     
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: Setup environment
+      run: |
+        cp .env.example .env
+        php artisan key:generate --force
     
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     
-    - name: Generate key
-      run: php artisan key:generate
-    
-    - name: Directory Permissions
+    - name: Fix permissions
       run: chmod -R 777 storage bootstrap/cache
     
-    - name: Create Database
+    - name: Setup database
       run: |
         mkdir -p database
         touch database/database.sqlite
+        php artisan migrate --force
     
-    - name: Run Migrations
-      run: php artisan migrate --force
+    - name: Clear cache before tests
+      run: php artisan config:clear
     
     - name: Execute tests
       env:
