--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,21 +26,17 @@ jobs:
         cp .env.example .env
         php artisan key:generate --force
     
-    - name: Fix permissions
-      run: chmod -R 777 storage bootstrap/cache
-    
     - name: Setup database
       run: |
         mkdir -p database
         touch database/database.sqlite
         php artisan migrate --force
     
-    - name: Clear cache before tests
-      run: php artisan config:clear
-    
     - name: Execute tests
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
         APP_ENV: testing
+        SESSION_DRIVER: array
+        CACHE_DRIVER: array
       run: php artisan test
